[workspace]
members = [
	"noria",
	"server",
	"applications",
]

[profile.release]
debug=true

[patch.crates-io]
# https://github.com/tower-rs/tokio-tower/pull/6
# optional -- just a perf optimization
# comment this out if you want cargo doc to work!
tokio-tower = { git = "https://github.com/ishanSharma07/tokio-tower.git", branch = "no-box" }
trawler = { git = "https://github.com/ms705/trawler.git" }
